assessment heatmap and rename detail to edit

--- a/Riskvalve/Views/Assessment/_Index.cshtml
+++ b/Riskvalve/Views/Assessment/_Index.cshtml
@@ -7,7 +7,7 @@
     var inspectionEffectivenessStates = InspectionEffectivenessModel.GetInspectionEffectivenessStates();
 
     var IsValveRepairedModel = new IsValveRepairedModel();
-    var isValveRepairedStates = IsValveRepairedModel.GetIsValveRepairedStates();
+    var isValveRepairedStates = IsValveRepairedModel.GetIsValveRepairedList();
 
     var InspectionMethodModel = new InspectionMethodModel();
     var inspectionMethods = InspectionMethodModel.GetInspectionMethods();
