--- a/Riskvalve/Views/AssetRegister/Area.cshtml
+++ b/Riskvalve/Views/AssetRegister/Area.cshtml
@@ -51,7 +51,7 @@
                                         <td>@item.CreatedAt</td>
                                         <td>
                                             <button class="btn btn-custom-size btn-primary invert btn-with-icon btn-area-action" attr-mode="view"
-                                                attr-itemid="@item.Id"><i class="fa-solid fa-magnifying-glass"></i>Detail</button>
+                                                attr-itemid="@item.Id"><i class="fa-solid fa-pencil"></i>Edit</button>
                                         </td>
                                     </tr>
                                 }
