--- a/Riskvalve/Views/AssetRegister/Asset.cshtml
+++ b/Riskvalve/Views/AssetRegister/Asset.cshtml
@@ -70,7 +70,7 @@
                                         <td>@item.ServiceFluid</td>
                                         <td>
                                             <button class="btn btn-custom-size btn-primary invert btn-with-icon btn-asset-action" attr-mode="view"
-                                                attr-itemid="@item.Id"><i class="fa-solid fa-magnifying-glass"></i>Detail</button>
+                                                attr-itemid="@item.Id"><i class="fa-solid fa-pencil"></i>Edit</button>
                                         </td>
                                     </tr>
                                 }
