--- a/Riskvalve/Views/AssetRegister/Platform.cshtml
+++ b/Riskvalve/Views/AssetRegister/Platform.cshtml
@@ -52,7 +52,7 @@
                                         <td>@item.Code</td>
                                         <td>
                                             <button class="btn btn-custom-size btn-primary invert btn-with-icon btn-platform-action" attr-mode="view"
-                                                attr-itemid="@item.Id"><i class="fa-solid fa-magnifying-glass"></i> Detail</button>
+                                                attr-itemid="@item.Id"><i class="fa-solid fa-pencil"></i> Edit</button>
                                         </td>
                                     </tr>
                                 }
