--- a/Riskvalve/Views/Inspection/Index.cshtml
+++ b/Riskvalve/Views/Inspection/Index.cshtml
@@ -10,7 +10,7 @@
     var inspectionMethods = InspectionMethodModel.GetInspectionMethods();
 
     var IsValveRepairedModel = new IsValveRepairedModel();
-    var isValveRepairedStates = IsValveRepairedModel.GetIsValveRepairedStates();
+    var isValveRepairedStates = IsValveRepairedModel.GetIsValveRepairedList();
 }
 
 <div class="container-fluid">
