--- a/Riskvalve/Views/User/Index.cshtml
+++ b/Riskvalve/Views/User/Index.cshtml
@@ -72,7 +72,7 @@
                                         <td>
                                             <button class="btn btn-custom-size btn-primary invert btn-with-icon btn-user-action"
                                                 attr-mode="view" attr-itemid="@user.Id"><i
-                                                    class="fa-solid fa-magnifying-glass"></i>Detail</button>
+                                                    class="fa-solid fa-pencil"></i>Edit</button>
                                         </td>
                                     </tr>
                                 }
