--- a/Riskvalve/Views/Tool/ImportAssessment.cshtml
+++ b/Riskvalve/Views/Tool/ImportAssessment.cshtml
@@ -17,6 +17,12 @@
                         <form>
                             <div class="row g-3 align-items-center">
                                 <div class="col-auto">
+                                    Download the template file <a href="/Uploads/Downloads/AssessmentTemplate.xlsx" target="_blank">here</a>
+                                </div>
+                            </div>
+                            <br/>
+                            <div class="row g-3 align-items-center">
+                                <div class="col-auto">
                                     <label for="fileUpload" class="col-form-label">File: </label>
                                 </div>
                                 <div class="col">
