--- a/Riskvalve/Views/Tool/ImportInspectionMaintenance.cshtml
+++ b/Riskvalve/Views/Tool/ImportInspectionMaintenance.cshtml
@@ -14,7 +14,13 @@
             <div class="content-container">
                 <div class="row">
                     <div class="col-md-6" style="padding-left:20px;">
-                        <form id="inspetion-form">
+                        <form id="inspection-form">
+                            <div class="row g-3 align-items-center">
+                                <div class="col-auto">
+                                    Download the template file <a href="/Uploads/Downloads/InspectionTemplate.xlsx" target="_blank">here</a>
+                                </div>
+                            </div>
+                            <br/>
                             <div class="row g-3 align-items-center">
                                 <div class="col-auto">
                                     <label for="fileUpload" class="col-form-label">File: </label>
