add version on login page

--- a/Riskvalve/Views/Login/Index.cshtml
+++ b/Riskvalve/Views/Login/Index.cshtml
@@ -42,6 +42,7 @@
             </form>
             <div class="copyright">
                 Copyright © 2023 Pertamina Hulu Energi. All rights reserved.
+                <small>Version 0.1.9</small>
             </div>
         </div>
     </div>
