--- a/Riskvalve/Views/Shared/ModalAsset.cshtml
+++ b/Riskvalve/Views/Shared/ModalAsset.cshtml
@@ -354,7 +354,7 @@
                         toxicorflamablefluidid: toxicorflamablefluid
                     },
                     success: function (data) {
-                        @* location.reload(); *@
+                        location.reload();
                     }
                 });
             } else if (mode == 'update') {
